knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Rate_Pay_Code__c/Rate_Pay_Code__c.object-meta.xml
<CustomObject>
    <label>Rate Pay Code</label>
    <nameField>
        <displayFormat>RPC-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rate Pay Codes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>