knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Rate_Pay_Code__c/fields/Cloned_From__c.field-meta.xml
<CustomField>
    <fullName>Cloned_From__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cloned From?</label>
    <referenceTo>Rate_Pay_Code__c</referenceTo>
    <relationshipLabel>Rate Pay Codes</relationshipLabel>
    <relationshipName>Rate_Pay_Codes</relationshipName>
    <type>Lookup</type>
</CustomField>