knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Rate_Pay_Code__c/fields/Pay_Code__c.field-meta.xml
<CustomField>
    <fullName>Pay_Code__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Pay Code</label>
    <referenceTo>Pay_Codes__c</referenceTo>
    <relationshipLabel>Rate Pay Codes</relationshipLabel>
    <relationshipName>Rate_Pay_Codes</relationshipName>
    <type>Lookup</type>
</CustomField>