knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Rate_Pay_Code__c/fields/Pay_Code_Name__c.field-meta.xml
<CustomField>
    <fullName>Pay_Code_Name__c</fullName>
    <formula>Pay_Code__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pay Code Name</label>
    <type>Text</type>
</CustomField>