knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Rate_Pay_Code__c/fields/Preventive_Care_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Preventive_Care_Agreement__c</fullName>
    <label>Preventive Care Agreement</label>
    <referenceTo>PreventiveCareAgreement</referenceTo>
    <relationshipLabel>Rate Pay Codes</relationshipLabel>
    <relationshipName>Rate_Pay_Codes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>