knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Rate_Pay_Code__c/validationRules/Prevent_Rate_Pay_Code_Edit.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Rate_Pay_Code_Edit</fullName>
    <active>true</active>
    <description>Rate Pay Code should not be updated for Executed Contract.</description>
    <errorConditionFormula>AND( Preventive_Care_Agreement__r.ContractPaymentAgreement.Contract.RecordType_DeveloperName__c = &quot;Client&quot;, ISPICKVAL( Preventive_Care_Agreement__r.ContractPaymentAgreement.Contract.Status, &quot;Executed&quot;) , OR( ISCHANGED( Pay_Code__c ) , ISNEW() ) )</errorConditionFormula>
    <errorMessage>Rate Pay Code should not be updated for Executed Contract.</errorMessage>
</ValidationRule>